# calculus-in-cpp

./: CMakeLists.txt  Camera.cpp  Camera.h  Canvas2D.cpp  Canvas2D.h  Curve2D.cpp  Curve2D.h  Hit.cpp  Hit.h  Object2D.cpp  Object2D.h  README.md  World2D.cpp  World2D.h  derivative_image.cpp  differentiation.cpp  differentiation.h  transformation.cpp  transformation.h
